# population_restorator_idu

./: .gitignore  LICENSE  Makefile  README.md  export_social_distribution.py  pyproject.toml  save_to_main_db.py
idu_balance_db/: __init__.py  __main__.py
idu_balance_db/db/: __init__.py
idu_balance_db/db/entities/: __init__.py  administrative_units.py  age_sex_social_stat_administrative_units.py  age_sex_stat_municipalities.py  blocks.py  buildings.py  cities.py  enums.py  municipalities.py  physical_objects.py  regions.py  social_groups.py
idu_balance_db/db/entities/social_stats/: __init__.py  age_distribution.py  sex_age_social_houses.py  sex_distribution.py  social_group_distribution.py
idu_balance_db/db/ops/: __init__.py  buildings.py  cities.py  territories.py
idu_balance_db/exceptions/: __init__.py  base.py
idu_balance_db/exceptions/db/: __init__.py  base.py  cities.py
idu_balance_db/logic/: __init__.py  balancing.py  city_division.py  demands_update.py  forecast.py  saving.py  social.py
idu_balance_db/utils/: __init__.py  dotenv.py  tmp_db.py
